Fix Java 8 compatibility in space search